--- a/login_page.html
+++ b/login_page.html
@@ -92,6 +92,38 @@
                 background-position:center;
                 background-repeat:no-repeat;
             }
+
+            #login_box{
+                background-color:rgba(248, 248, 248, 0.8);
+                border-radius:20px;
+                position:absolute;
+                top:20%;
+                left:15%;
+                right:25%;
+                bottom:25%;
+                width:70%;
+                height:310px;
+                text-align:center;
+            }
+
+            input[type='text'], input[type='password']{
+                border:1px solid rgba(0,0,0,0.2);
+                width:220px;
+                height:15%;
+                margin-top:8px;
+                font-size:20px;
+            }
+
+            input[type='submit']{
+                width:160px;
+                margin-top:15px;
+                font-size:20px;
+            }
+
+            img{
+                width:80%;
+                padding-top:2px;
+            }
         }
     </style>
     <title>Login Page</title>
