--- a/login_page.html
+++ b/login_page.html
@@ -122,7 +122,8 @@
 
             img{
                 width:80%;
-                padding-top:2px;
+                margin-top:0px;
+                padding-top:5px;
             }
         }
     </style>
