--- a/dashboard.html
+++ b/dashboard.html
@@ -10,8 +10,18 @@
             box-sizing:border-box;
         }
 
-        header{position:absolute;background-color:white;height:90px;}.intro{position:relative;left:20%;
+        header{position:absolute;background-color:white;height:90px;width:100%;}.intro{position:relative;left:20%;
             width:150px;bottom:30%;margin-right:300px;}
+            
+        .logout{
+            position:relative;
+            left:80%;
+            bottom:50%;
+        }
+
+        .lo_button{
+            background-color:rgb(199, 52, 52);
+        }
 
         img{
             width:15%;
@@ -46,6 +56,11 @@
         </span>
         <span>
             <div class='intro'>Hi, User123456!</div>
+        </span>
+        <span>
+            <div class='logout'>
+                <input class='lo_button' type='button' name='logout' value='Logout'>
+            </div>
         </span>
     </header>
 
