login page revision

--- a/login_page.html
+++ b/login_page.html
@@ -85,6 +85,7 @@
             background-size:cover;
             background-repeat:no-repeat;
         }
+        
         @media screen and (max-width:768px){
             html{
                 background:url(https://i.postimg.cc/KY7PjDYq/wp7462852-wires-wallpapers.jpg) fixed;
@@ -92,6 +93,7 @@
                 background-position:center;
                 background-repeat:no-repeat;
             }
+
 
             #login_box{
                 background-color:rgba(248, 248, 248, 0.8);
@@ -126,6 +128,13 @@
                 padding-top:5px;
             }
         }
+
+        @media screen and (min-width:1920px){
+            #login_box{
+                height:500px;
+            }
+        }
+
     </style>
     <title>Login Page</title>
 </head>
