--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
             
         .logout{
             width:150px;
-            margin-left:1100px;
+            margin-left:1200px;
             margin-top:-28px;
 
         }
@@ -148,6 +148,19 @@
             font-family:'Nanum Gothic',sans-serif;
             font-size:25px;
             padding:10px;
+        }
+
+        @media screen and (min-width:1920px){
+            .logo{
+                width:12%;
+            }
+            .intro{
+                margin-top:-45px;
+                margin-left:270px;
+            }
+            .logout{
+                margin-left:1700px;
+            }
         }
 
     </style>
