Improved responsiveness for big screen

--- a/dashboard.html
+++ b/dashboard.html
@@ -163,6 +163,19 @@
             }
         }
 
+        @media screen and (max-width:1349px){
+            .logo{
+                width:15%;
+            }
+            .intro{
+                margin-top:-35px;
+                margin-left:270px;
+            }
+            .logout{
+                margin-left:1100px;
+            }
+        }
+
     </style>
     <title>Dashboard</title>
 </head>
